# SHPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/iwenchaos/shplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: AndroidLog.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/java/cn/iwenchaos/shplayer/: MainActivity.kt
app/src/main/java/cn/iwenchaos/shplayer/base/: BaseActivity.kt  BaseContext.kt  SHPlayerApplication.kt
app/src/main/java/cn/iwenchaos/shplayer/module/core/android/: SHPlayerActivity.kt
app/src/main/java/cn/iwenchaos/shplayer/module/main/: MainActivity.kt
app/src/main/java/cn/iwenchaos/shplayer/module/main/vm/: MainViewModel.kt
app/src/main/java/cn/iwenchaos/shplayer/util/: IntentUtils.kt  ToastHelper.kt
app/src/main/res/layout/: activity_main.xml  activity_sh_player.xml  main_recycler_list_item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/iwenchaos/shplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
